# dust-dot

1-thrift/: .gitignore  build.sh  heroku-og-app.sh  heroku-og-service.sh  heroku.sh  og-service.Dockerfile  r.sh  readme.md  run.sh  thrift-gen.sh  thrift.Dockerfile  web-app.Dockerfile
1-thrift/og-app/: .gitignore  Gemfile  ProcfileFree
1-thrift/og-service/: .gitignore  Procfile  og-service.cabal  stack.yaml
1-thrift/og-service/src/: Client.hs  Main.hs
1-thrift/thrift/: ogApi.thrift  run-thrift.sh
1-thrift/web-app/: .gitignore  Gemfile  client.rb  server.rb
2-rest-voting/: .gitignore  index.js  package.json
2-rest-voting/app/: authentication.js  ballot-api.js  ballot-storage.js  index.js  stat-api.js  user-api.js  user-storage.js  vote-api.js  vote-storage.js
2-rest-voting/test/: test.js
3-hadoop/: .gitignore  Dockerfile  docker.sh  fmapper.py  freducer.py  run-mapreduce.sh  text-short.txt
4-spark/: Dockerfile  copy-jar.sh  copy-query.sh  docker.sh  query.txt  run-ranker.sh
4-spark/opencorpora/: 0019.txt  0020.txt  0043.txt  0210.txt  0309.txt  0310.txt  0312.txt  0313.txt  0314.txt  0316.txt  0318.txt  0319.txt  0321.txt  0322.txt  0323.txt  0344.txt  0352.txt  0354.txt  0356.txt  0367.txt  0369.txt  0370.txt  0374.txt  0375.txt  0383.txt  0424.txt  0425.txt  0426.txt  0434.txt  0448.txt  0491.txt  0498.txt  0510.txt  0546.txt  0565.txt  0618.txt  0622.txt  0640.txt  0646.txt  0665.txt  (+64 more)
5-rabbitmq/: Dockerfile  docker.sh  receive.py  run-stats.sh  send.py
6-zeromq/: Dockerfile  docker.sh  master.py  worker.py
7-akka/: DirSize.scala  Dockerfile  build.sbt  docker.sh
(+20 files in other folders)
