name:                og-service
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/og-service#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable og-service
  hs-source-dirs:      src, gen-hs
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       thrift == 0.9.3,
                       containers,
                       text,
                       hashable,
                       unordered-containers,
                       vector,
                       bytestring,
                       network,
                       QuickCheck

executable og-client
  hs-source-dirs:      src, gen-hs
  main-is:             Client.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       thrift == 0.9.3,
                       containers,
                       text,
                       hashable,
                       unordered-containers,
                       vector,
                       bytestring,
                       network,
                       network-uri,
                       QuickCheck
